--- a/www/package.json
+++ b/www/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -13,6 +14,9 @@
   "devDependencies": {
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.34",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
   }
 }
