--- a/packages/admin-backend/cloudformation.yaml
+++ b/packages/admin-backend/cloudformation.yaml
@@ -141,6 +141,20 @@ Resources:
             Path: /preguntas
             Method: get
 
+  PreguntaDetailGet:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: dist/src/preguntas
+      Handler: preguntas.detail
+      Role: !GetAtt LambdaRole.Arn
+      Events:
+        Get:
+          Type: Api
+          Properties:
+            RestApiId: !Ref Api
+            Path: /pregunta
+            Method: get
+
   ConveniosGet:
     Type: AWS::Serverless::Function
     Properties:
