--- a/packages/app-backend/package.json
+++ b/packages/app-backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@defol-cl/app-backend",
-  "version": "1.0.30",
+  "version": "1.0.31",
   "private": "true",
   "description": "",
   "main": "index.js",
@@ -10,13 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@defol-cl/libs": "1.0.30",
-    "@defol-cl/root": "1.0.30",
+    "@defol-cl/libs": "1.0.31",
+    "@defol-cl/root": "1.0.31",
     "aws-sdk": "^2.1023.0",
     "moment": "2.29.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.6"
+    "@types/node": "^16.11.6",
+    "@types/uuid": "^8.3.1"
   }
 }
