ADD: API GET preguntas (app), fix prefix tokens (to differentiate app from admin apis), @libs-update

--- a/packages/app-backend/cloudformation.yaml
+++ b/packages/app-backend/cloudformation.yaml
@@ -191,7 +191,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: dist/src/preguntas
-      Handler: preguntas.post
+      Handler: preguntas.put
       Role: !GetAtt LambdaRole.Arn
       Events:
         Get:
