SIGNAL: INIT: first version (2)

--- a/packages/signal/cloudformation.yaml
+++ b/packages/signal/cloudformation.yaml
@@ -33,7 +33,7 @@ Resources:
     Type: AWS::Events::EventBus
     Properties:
       EventSourceName: !Sub signal-${Branch}
-      Name: !Sub signal-${Branch}
+      Name: !Sub signal/${Branch}
 
   SignalEmailRule:
     Type: AWS::Events::Rule
