--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -279,7 +279,7 @@ jobs:
 
   admin-backend:
     runs-on: ubuntu-latest
-    needs: [params, publish-libs]
+    needs: [params, publish-libs, signal]
     if: always() && (needs.params.outputs.update-libs == 'true' || needs.params.outputs.admin-backend == 'true')
     steps:
       - uses: actions/checkout@v2
