SIGNAL: INIT: first version (3)

--- a/packages/signal/cloudformation.yaml
+++ b/packages/signal/cloudformation.yaml
@@ -32,7 +32,7 @@ Resources:
   SignalEventBus:
     Type: AWS::Events::EventBus
     Properties:
-      EventSourceName: !Sub signal-${Branch}
+      EventSourceName: !Sub signal/${Branch}
       Name: !Sub signal/${Branch}
 
   SignalEmailRule:
