--- a/packages/signal/cloudformation.yaml
+++ b/packages/signal/cloudformation.yaml
@@ -32,8 +32,7 @@ Resources:
   SignalEventBus:
     Type: AWS::Events::EventBus
     Properties:
-      EventSourceName: !Sub signal/${Branch}
-      Name: !Sub signal/${Branch}
+      Name: !Sub signal-${Branch}-bus
 
   SignalEmailRule:
     Type: AWS::Events::Rule
