SIGNAL: INIT: first version (5)

--- a/packages/signal/cloudformation.yaml
+++ b/packages/signal/cloudformation.yaml
@@ -44,10 +44,7 @@ Resources:
       Name: !Sub signal-${Branch}-email-rule
       State: ENABLED
       Targets:
-        - Arn:
-            Fn::GetAtt:
-              - SignalEventBus
-              - Arn
+        - Arn: !Ref EmailEventFunction
           Id: !Sub signal-${Branch}-email-rule-id
 
   PermissionForEventsToInvokeLambda:
