--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -24,6 +24,7 @@ jobs:
       admin-backend: ${{ steps.packages-admin-backend-changed.outputs.any_changed }}
       admin-frontend: ${{ steps.packages-admin-frontend-changed.outputs.any_changed }}
       signal: ${{ steps.packages-signal-changed.outputs.any_changed }}
+      www: ${{ steps.packages-www-changed.outputs.any_changed }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -79,6 +80,13 @@ jobs:
           files: |
             .github/workflows/all.yml
             packages/signal
+      - id: packages-www-changed
+        name: detect changes on packages/www
+        uses: tj-actions/changed-files@v1.1.3
+        with:
+          files: |
+            .github/workflows/all.yml
+            www
 
   publish-libs:
     runs-on: ubuntu-latest
@@ -492,3 +500,48 @@ jobs:
           --s3-bucket ${{ env.RESOURCE_S3_BUCKET }} \
           --capabilities CAPABILITY_IAM --region ${{ secrets.AWS_REGION }} \
           --parameter-overrides Branch=${{ steps.branch.outputs.name }}
+
+
+  www:
+    runs-on: ubuntu-latest
+    needs: [ params ]
+    if: always() && needs.params.outputs.www == 'true'
+    steps:
+      - uses: actions/checkout@v2
+      - id: branch
+        shell: bash
+        run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/heads/})"
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+      - name: yarn-install
+        working-directory: ./www
+        run: yarn install
+      - name: yarn-build
+        working-directory: ./www
+        run: yarn build
+      - name: yarn-export
+        working-directory: ./www
+        run: yarn export
+      - id: get-app-frontend-cloudfront-distribution-id-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
+        with:
+          ssm_parameter: /defol/${{ steps.branch.outputs.name }}/www/cf-distribution-id
+          env_variable_name: CFRONT_DIST_ID
+      - id: get-app-frontend-bucket-name-ssm-parameter
+        uses: marvinpinto/action-inject-ssm-secrets@latest
+        with:
+          ssm_parameter: /defol/${{ steps.branch.outputs.name }}/www/bucket-name
+          env_variable_name: S3_BUCKET
+      - uses: kersvers/s3-sync-with-cloudfront-invalidation@v1.0.0
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: ${{ env.S3_BUCKET }}
+          DISTRIBUTION_ID: ${{ env.CFRONT_DIST_ID }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          SOURCE_DIR: ./www/out
