--- a/packages/admin-backend/cloudformation.yaml
+++ b/packages/admin-backend/cloudformation.yaml
@@ -118,6 +118,7 @@ Resources:
                 Action:
                   - dynamodb:*
                   - s3:*
+                  - events:PutEvents
                 Resource: "*"
 
   Api:
