SIGNAL: FIX: add ses:sendRawEmail permission to lambda EmailEventFunction

--- a/packages/signal/cloudformation.yaml
+++ b/packages/signal/cloudformation.yaml
@@ -51,7 +51,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - ses:SendEmail
-                  - ses:SendRawEmai
+                  - ses:SendRawEmail
                 Resource: "*"
 
   EmailEventFunction:
