FIX: param name api (2)

--- a/packages/admin-backend/cloudformation.yaml
+++ b/packages/admin-backend/cloudformation.yaml
@@ -180,7 +180,7 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref Api
-            Path: /preguntas/contacto/{contactoId}
+            Path: /preguntas/contacto/{contacto}
             Method: get
 
   PreguntaDetailGet:
